--- a/app/index.html
+++ b/app/index.html
@@ -4,35 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>RControl Factory</title>
+
   <meta name="theme-color" content="#0b1020" />
 
-  <script>
-    (function () {
-      try {
-        var p = location.pathname || "/";
-        window.__RCF_ROOT__ = (p === "/app" || p.startsWith("/app/")) ? "/app" : "";
-      } catch {
-        window.__RCF_ROOT__ = "";
-      }
-    })();
-  </script>
-
-  <script>
-    (function () {
-      try {
-        var R = window.__RCF_ROOT__ || "";
-        var manifest = document.createElement("link");
-        manifest.rel = "manifest";
-        manifest.href = (R || "") + "/manifest.json";
-        document.head.appendChild(manifest);
-
-        var css = document.createElement("link");
-        css.rel = "stylesheet";
-        css.href = (R || "") + "/styles.css";
-        document.head.appendChild(css);
-      } catch {}
-    })();
-  </script>
+  <!-- mantém do jeito que teu deploy já usa -->
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
@@ -54,80 +31,28 @@
         } catch {}
       }
 
-      function rootPath(p) {
-        var R = window.__RCF_ROOT__ || "";
-        if (!p) return R || "";
-        if (!p.startsWith("/")) p = "/" + p;
-        return (R || "") + p;
-      }
-
-      function loadAny(paths) {
+      function loadScript(src) {
         return new Promise((resolve, reject) => {
-          let i = 0;
-          function tryNext() {
-            if (i >= paths.length) return reject(new Error("all paths failed"));
-            const src = paths[i++];
-            const s = document.createElement("script");
-            s.src = src;
-            s.async = false;
-            s.onload = () => resolve(src);
-            s.onerror = () => tryNext();
-            document.head.appendChild(s);
-          }
-          tryNext();
+          const s = document.createElement("script");
+          s.src = src;
+          s.async = false; // mantém ordem
+          s.onload = () => resolve(src);
+          s.onerror = () => reject(new Error("fail: " + src));
+          document.head.appendChild(s);
         });
       }
 
       async function boot() {
-        const R = window.__RCF_ROOT__ || "";
-        rcfLog("index boot: root=" + (R || "/"));
+        rcfLog("index boot: start");
 
-        const modules = [
-          { name: "github_sync",       paths: [rootPath("/js/core/github_sync.js")] },
-          { name: "vfs_overrides",     paths: [rootPath("/js/core/vfs_overrides.js")] },
-
-          // ✅ NOVO: ponte que cria window.RCF_VFS (pro Injector enxergar)
-          { name: "vfs_shim",          paths: [rootPath("/js/core/vfs_shim.js")] },
-
-          { name: "mother_selfupdate", paths: [rootPath("/js/core/mother_selfupdate.js")] },
-          { name: "injector",          paths: [rootPath("/js/core/injector.js")] },
-
-          { name: "settings_compact",  paths: [rootPath("/js/settings_compact.js")] },
-
-          { name: "admin_github_ui",   paths: [rootPath("/js/admin.github.js"), rootPath("/js/admin.js")] },
-
-          { name: "patchQueue",        paths: [rootPath("/js/engine/patchQueue.js")] },
-          { name: "organizerEngine",   paths: [rootPath("/js/engine/organizerEngine.js")] },
-          { name: "applyPipeline",     paths: [rootPath("/js/engine/applyPipeline.js")] },
-          { name: "builderSafe",       paths: [rootPath("/js/builder/builderSafe.js")] },
-        ];
-
-        for (const m of modules) {
-          try {
-            const okPath = await loadAny(m.paths);
-            rcfLog("module loaded ✅ " + m.name + " ← " + okPath);
-          } catch {
-            rcfLog("module missing ❌ " + m.name + " (tentou: " + m.paths.join(" | ") + ")");
-          }
-        }
-
+        // ✅ carrega somente o app principal
+        // (NÃO registra SW aqui — deixa o app.js cuidar disso)
         try {
-          const appPath = rootPath("/app.js");
-          await loadAny([appPath]);
-          rcfLog("app.js loaded ✅ " + appPath);
-        } catch {
-          rcfLog("app.js missing ❌ " + rootPath("/app.js"));
+          const ok = await loadScript("/app.js");
+          rcfLog("app.js loaded ✅ " + ok);
+        } catch (e) {
+          rcfLog("app.js missing ❌ /app.js");
         }
-
-        try {
-          if ("serviceWorker" in navigator) {
-            const swPath = rootPath("/sw.js");
-            const scope = (window.__RCF_ROOT__ || "/") + "/";
-            navigator.serviceWorker.register(swPath, { scope })
-              .then(() => rcfLog("sw register: ok (" + swPath + " scope=" + scope + ")"))
-              .catch(() => rcfLog("sw register: fail/ignored"));
-          }
-        } catch {}
       }
 
       boot();
