--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,11 @@
   <title>RControl Factory</title>
   <meta name="theme-color" content="#0b1020" />
 
-  <!-- tenta root primeiro, mas mantém fallback /app/ via loader -->
-  <link rel="manifest" href="/manifest.json" />
-  <link rel="stylesheet" href="/styles.css" />
+  <!-- importante: base relativo pra funcionar em /app/ -->
+  <base href="./" />
+
+  <link rel="manifest" href="./manifest.json" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
   <noscript>Ative o JavaScript para usar o app.</noscript>
@@ -37,7 +39,7 @@
             const src = paths[i++];
             const s = document.createElement("script");
             s.src = src;
-            s.async = false; // ordem
+            s.async = false;
             s.onload = () => resolve(src);
             s.onerror = () => tryNext();
             document.head.appendChild(s);
@@ -47,14 +49,33 @@
       }
 
       async function boot() {
-        rcfLog("index boot: starting...");
+        rcfLog("index boot: starting module loader...");
 
-        // Carrega primeiro as bases que habilitam injeção/override/mãe
+        // MÓDULOS CORE (ordem importa)
         const modules = [
-          { name: "injector", paths: ["/js/core/injector.js", "/app/js/core/injector.js"] },
-          { name: "vfs_overrides", paths: ["/js/core/vfs_overrides.js", "/app/js/core/vfs_overrides.js"] },
-          { name: "github_sync", paths: ["/js/core/github_sync.js", "/app/js/core/github_sync.js"] },
-          { name: "mother_selfupdate", paths: ["/js/core/mother_selfupdate.js", "/app/js/core/mother_selfupdate.js"] }
+          // github pull/push
+          { name: "github_sync", paths: ["./js/core/github_sync.js"] },
+
+          // overrides
+          { name: "vfs_overrides", paths: ["./js/core/vfs_overrides.js"] },
+
+          // mae selfupdate
+          { name: "mother_selfupdate", paths: ["./js/core/mother_selfupdate.js"] },
+
+          // injector (Settings)
+          { name: "injector", paths: ["./js/core/injector.js"] },
+
+          // remove Logs dentro do Settings (patch)
+          { name: "settings_cleanup", paths: ["./js/core/settings_cleanup.js"] },
+
+          // sua UI do Admin GitHub (o seu arquivo real é admin.github.js)
+          { name: "admin_ui_github", paths: ["./js/admin.github.js"] },
+
+          // engine/builder opcionais (se existirem)
+          { name: "patchQueue", paths: ["./js/engine/patchQueue.js"] },
+          { name: "organizerEngine", paths: ["./js/engine/organizerEngine.js"] },
+          { name: "applyPipeline", paths: ["./js/engine/applyPipeline.js"] },
+          { name: "builderSafe", paths: ["./js/builder/builderSafe.js"] },
         ];
 
         for (const m of modules) {
@@ -66,19 +87,18 @@
           }
         }
 
-        // Depois sobe o app principal
+        // app principal
         try {
-          await loadAny(["/app.js", "/app/app.js"]);
-          rcfLog("app.js loaded ✅");
+          await loadAny(["./app.js"]);
+          rcfLog("app.js loaded ✅ ./app.js");
         } catch {
-          rcfLog("app.js missing ❌");
+          rcfLog("app.js missing ❌ ./app.js");
         }
 
-        // SW: registra UMA vez (evita duplicação fail/ignored)
+        // SW (scope /app/ para ficar estável com base href)
         try {
-          if ("serviceWorker" in navigator && !window.__RCF_SW_REGISTERED__) {
-            window.__RCF_SW_REGISTERED__ = true;
-            navigator.serviceWorker.register("/sw.js", { scope: "/" })
+          if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("./sw.js", { scope: "./" })
               .then(() => rcfLog("sw register: ok"))
               .catch(() => rcfLog("sw register: fail/ignored"));
           }
